[package]
name = "thread_lake"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "A very high level thread pool manager"
repository = "https://github.com/ray33ee/thread_lake"
readme = "readme.md"
keywords = ["thread", "thread-pool"]
categories = ["concurrency"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
